# varcol

./: .clang-format  CMakeLists.txt  main.cpp  varcoltmpl.cuh  varcolumn.cu  varcolumn.h  variant.h
